Fix up alignment of header and footnotes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -54,28 +54,6 @@ main {
   margin-left: -1.375em !important;
 }
 
-/**
- * Wrapper
-   * TODO: this controls the header and footer positioning. turn it into bootstrap nonsense instead.
- */
-.wrapper {
-  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: $spacing-unit;
-  padding-left: $spacing-unit;
-  @extend %clearfix;
-
-  @include media-query($on-laptop) {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-    padding-right: calc($spacing-unit / 2);
-    padding-left: calc($spacing-unit / 2);
-  }
-}
-
-
 
 /**
  * Clearfix
@@ -315,6 +293,10 @@ pre tt {
   position: sticky;
   top: 0;
   color: $grey-color;
+
+  ol li {
+    padding-right: calc($spacing-unit/3);
+  }
 }
 
 .footnote {
